kubernetes_yaml/pv_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: my-vol
  
  volumes:
    - name: my-vol
      persistentVolumeClaim:
        claimName: my-pvc
