kubernetes_yaml/rc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-rc-service
  labels:
    app: myapp-httpd
spec:
  type: NodePort
  selector:
    app: myapp-httpd
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
