kubernetes_yaml/rs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myreplicaset-service
  labels:
    app: mycbz
spec:
  type: LoadBalancer
  selector:
    app: mycbz
    
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
